--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1716,6 +1716,10 @@ textarea {
       max-height: 70vh;
     }
 
+    #membersList {
+      max-height: 55vh;
+    }
+
     // card compose box
     .cardComposer {
       position: relative;
