finally added login feedback and fixed click on badge preview popup

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2485,6 +2485,18 @@ textarea {
       }
     }
 
+    // login success message
+    .errorMessage {
+      font-weight: bold;
+      color: green;
+    }
+
+    // login error message
+    .errorMessage {
+      font-weight: bold;
+      color: red;
+    }
+
     // area for avatars on the card
     .lilypad {
       position: absolute;
