--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1615,6 +1615,7 @@ textarea {
       img {
         width: 100%;
         height: 100%;
+        position: relative;
       }
 
       &.open {
@@ -1638,16 +1639,26 @@ textarea {
     .bird > .badge {
       position: absolute;
       top: -0.5em;
-      right: -0.5em;
-      background-color: rgba(255, 10, 10, 0.85);
+      left: 75%;
       border-radius: 5em;
       color: white;
       font-size: 0.9em;
       padding: 0.2em 0.4em;
-      transform: translateX(50%);
       width: max-content;
       max-width: 4em;
       cursor: pointer;
+
+      &.red {
+        background-color: rgba(255, 10, 10, 0.85);
+      }
+
+      &.green {
+        background-color: rgba(10, 127, 10, 0.85);
+      }
+
+      &.yellow {
+        background-color: rgba(175, 175, 10, 0.85);
+      }
 
       // on bird
       &.subscript {
@@ -1696,16 +1707,25 @@ textarea {
       }
 
       .dragZone {
-        display: inline;
+        // display: inline;
 
         .card.checkmark {
           background: unset;
-          display: inline-block;
+          // display: block;
           margin: 0;
           padding: 0 0.25em;
           transform: unset;
           left: unset;
           line-height: 2em;
+
+          .content {
+            display: inline-block;
+            margin: 0 1em 0 0;
+
+            span {
+              float: left;
+            }
+          }
 
           img {
             width: 1.5em;
@@ -1799,6 +1819,7 @@ textarea {
     #members .popupPanel .results,
     #missions .popupPanel,
     #proposals .popupPanel,
+    .accomplishments .popupPanel .stack,
     .grid,
     .cardComposer .zone,
     .chatStack,
@@ -2540,8 +2561,8 @@ textarea {
     // area for avatars on the card
     .lilypad {
       position: absolute;
-      bottom: 0.5em;
-      left: 0.5em;
+      top: 3em;
+      right: 0.5em;
     }
 
     // remove padding on Tippy box
@@ -2603,6 +2624,23 @@ textarea {
     // A wrapper for the current card
     #tour-current-card {
       padding-bottom: 8.5em;
+    }
+
+    // Star / medals / badges / accomplishments button on a card
+    .accomplishments {
+      position: absolute;
+      left: 0.5em;
+      bottom: 0.5em;
+
+      .popupPanel {
+        max-width: 42vw;
+        width: max-content;
+
+        .stack {
+          max-height: 44vh;
+          overflow-y: auto;
+        }
+      }
     }
   }
 }
