--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1156,8 +1156,7 @@ textarea {
     // deck popup
     #deck {
       .actionCircle {
-        top: unset;
-        bottom: 1.25em;
+        top: 2.5em;
         left: calc(100% + 2.5em);
         width: 3.5em;
         height: 3.5em;
@@ -1647,10 +1646,7 @@ textarea {
       width: max-content;
       max-width: 4em;
       cursor: pointer;
-
-      &.red {
-        background-color: rgba(255, 10, 10, 0.85);
-      }
+      background-color: rgba(255, 10, 10, 0.85);
 
       &.green {
         background-color: rgba(10, 127, 10, 0.85);
@@ -1723,7 +1719,7 @@ textarea {
             margin: 0 1em 0 0;
 
             span {
-              float: left;
+              float: right;
             }
           }
 
@@ -1738,7 +1734,7 @@ textarea {
     .checkmarkImage {
       height: 2em;
       fill: white;
-      margin-top: 0.75em;
+      // margin-top: 0.75em;
       outline: none;
 
       &.red {
