--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2666,6 +2666,10 @@ textarea {
         max-height: 100%;
         fill: blue;
       }
+
+      .inPort {
+        opacity: 0.75;
+      }
     }
   }
 }
