1st attempt to add grid to p2p sync

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2490,6 +2490,7 @@ textarea {
         .dropZone {
           width: 100%;
           height: max-content;
+          min-height: 2.5em;
         }
       }
     }
