fixed style on mini

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -347,7 +347,7 @@ textarea {
           }
         }
 
-        &.mini.after {
+        &.mini.before {
           position: absolute;
           right: 0;
           bottom: 0;
