--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -893,15 +893,26 @@ textarea {
       }
     }
 
-    // connection status indicator, currently unused
+    // connection status indicator
     #status {
       position: fixed;
-      bottom: 0;
-      left: 0;
+      bottom: 0.5em;
+      left: 4.5em;
       margin-left: 0.5em;
       margin-bottom: 0.3em;
       cursor: pointer;
       height: 3em;
+
+      &.disconnected {
+        filter: hue-rotate(-38deg);
+      }
+    }
+
+    // full-screen overlay when disconnected
+    #disconnected {
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.2);
     }
 
     // theme changer, in main menu?
@@ -2837,6 +2848,76 @@ textarea {
         left: 50%;
         transform: translateX(-50%);
       }
+    }
+
+    // card while it is loading
+    // .card.badge.loading {
+    // background-color: rgba(0, 0, 0, 0.5);
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // transform: unset;
+    // left: unset;
+    // position: unset;
+    // width: 100%;
+    // height: 100%;
+    // width: unset;
+    // height: unset;
+    // }
+
+    // spinner for when cards are loading
+    .spinner {
+      width: 3em;
+      height: 3em;
+      margin: 0;
+      position: relative;
+      top: 25%;
+      margin-left: auto;
+      margin-right: auto;
+      // transform: translateX(-50%);
+      // margin: 100px auto;
+      background-color: #444;
+      border-radius: 100%;
+      -webkit-animation: sk-scaleout 1s infinite ease-in-out;
+      animation: sk-scaleout 1s infinite ease-in-out;
+    }
+
+    @-webkit-keyframes sk-scaleout {
+      0% {
+        -webkit-transform: scale(0);
+      }
+      100% {
+        -webkit-transform: scale(1);
+        opacity: 0;
+      }
+    }
+
+    @keyframes sk-scaleout {
+      0% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+      }
+      100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 0;
+      }
+    }
+
+    // drag-and-drop source zone
+    .dragZone {
+      // width: 100%;
+      // height: 100%;
+      // position: relative;
+    }
+
+    // cards while they are loading
+    .card.loading,
+    .card.mini.loading,
+    .card.badge.loading {
+      background-color: rgba(0, 0, 0, 0.5);
     }
   }
 }
