loading screen instead of login screen

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2919,6 +2919,13 @@ textarea {
     .card.badge.loading {
       background-color: rgba(0, 0, 0, 0.5);
     }
+
+    // loading screen
+    #loading {
+      padding-top: 43vh;
+      font-size: 1.3em;
+      color: #666;
+    }
   }
 }
 
