--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3019,6 +3019,74 @@ textarea {
         }
       }
     }
+
+    // Background color of the popupPanel buttons when they have unreads/unseens
+    .red0 {
+      background-color: rgba(200, 200, 200, 0.25);
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.25);
+      }
+    }
+    .red1 {
+      background-color: rgba(220, 180, 180, 0.25);
+      &:hover {
+        background-color: rgba(220, 180, 180, 0.45);
+      }
+    }
+    .red2 {
+      background-color: rgba(240, 160, 160, 0.25);
+      &:hover {
+        background-color: rgba(240, 160, 160, 0.45);
+      }
+    }
+    .red3 {
+      background-color: rgba(255, 140, 140, 0.25);
+      &:hover {
+        background-color: rgba(255, 140, 140, 0.45);
+      }
+    }
+    .red4 {
+      background-color: rgba(255, 120, 120, 0.3);
+      &:hover {
+        background-color: rgba(255, 120, 120, 0.5);
+      }
+    }
+    .red5 {
+      background-color: rgba(255, 100, 100, 0.35);
+      &:hover {
+        background-color: rgba(255, 100, 100, 0.55);
+      }
+    }
+    .red6 {
+      background-color: rgba(255, 80, 80, 0.4);
+      &:hover {
+        background-color: rgba(255, 80, 80, 0.6);
+      }
+    }
+    .red7 {
+      background-color: rgba(255, 60, 60, 0.45);
+      &:hover {
+        background-color: rgba(255, 60, 60, 0.65);
+      }
+    }
+    .red8 {
+      background-color: rgba(255, 40, 40, 0.5);
+      &:hover {
+        background-color: rgba(255, 40, 40, 0.7);
+      }
+    }
+    .red9 {
+      background-color: rgba(255, 20, 20, 0.55);
+      &:hover {
+        background-color: rgba(255, 20, 20, 0.75);
+      }
+    }
+    .red10 {
+      background-color: rgba(255, 0, 0, 0.6);
+      &:hover {
+        background-color: rgba(255, 0, 0, 0.8);
+      }
+    }
   }
 }
 
