--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3141,6 +3141,16 @@ textarea {
       margin-bottom: 0;
     }
 
+    // Background behind a modal dialog
+    .dimBackground {
+      background-color: rgba(0, 0, 0, 0.6);
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+
     // Modal dialog containing the hardcoded (but glossed) AO user manual
     #theManual {
       background-color: rgba(5, 0, 10, 0.9);
